# locales

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.ccls-cache/@@home@rnek0@codes@rust@rustRepos@locales/: @usr@include@alloca.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  @usr@include@bits@types@__sigset_t.h.blob  @usr@include@bits@types@clock_t.h.blob  @usr@include@bits@types@clockid_t.h.blob  @usr@include@bits@types@sigset_t.h.blob  @usr@include@bits@types@struct_FILE.h.blob  @usr@include@bits@types@struct_timespec.h.blob  @usr@include@bits@types@struct_timeval.h.blob  (+20 more)
src/: lang  lang.c  langLocale.h  lib.rs  main.c  main.rs
(+7 files in other folders)
