[package]
name = "locales"
version = "0.1.0"
authors = ["'Tony Simoes' <sr.tony@gmail.com>"]
edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
locale_config = "0.3.0"
#libc = "0.2.66"

#[build-dependencies]
#bindgen = "0.53.1"
